# IoT_OpenCV

./: .gitignore  ASEMA_block_tentative_diagram.md  LICENSE  README.md  encode_face.py  pyproject.toml  recognize.py  recognize_video.py
Recordings/: 20241011_200544.heic  20241011_200555.heic  20241011_201247.heic  20241011_204334.heic
data/encodings/: face_embeddings.pkl  face_encodings.pkl  face_encodings_multi.pkl
doc/Assets/: PRESENTATION.md
doc/Diagrams/: Detailed Mermaid Flowchart for IoT Attendance Tracking System.md  Detailed Mermaid Flowchart for IoT Attendance Tracking System.mermaid  Detailed UML Flowchart for IoT Attendance Tracking System.md  Preprocess_UML_Functional_Diagram.md  preprocess.md
doc/Recordings/: 20241011_201258.heic  20241011_204336.heic  20241011_204341.heic
pipresence/: __main__.py  config.py  detect_faces.py  main.py  preprocess.py  preprocessing.py  recognize_faces.py
pipresence/tools/: draw_bounding_box.py  utils.py
tests/: embedding_integration.ipynb  import.py  inference_on_image.py  input_output_node_names.py  troubleshoot.ipynb  troubleshoot_confidence_threshold.ipynb
