[tool.poetry]
name = "pipresence"
version = "0.1.0"
description = "Face recognition pipeline using YOLOv8 and MobileFaceNet for attendance tracking on Raspberry Pi."
authors = ["elee02 <elyorrasulov1822@gmail.com>", ]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.9"
click = "^8.0"
numpy = ">=1.26"
opencv-python = "^4.5"
onnxruntime = "^1.20"
protobuf = "~3.20"
sympy = "1.13.1"

[tool.poetry.dev-dependencies]
pytest = "^6.2"

[tool.poetry.scripts]
pipresence = "pipresence.__main__:run"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
